--- a/src/Banner.css
+++ b/src/Banner.css
@@ -56,5 +56,20 @@
     display: none;
   }
 }
-
-
+.banner__button {
+  color: #fff;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin-right: 0.4rem;
+  background-color: rgba(51, 51, 51, 0.5);
+  border: none;
+  outline: none;
+  font-size: 1rem;
+}
+.banner__button:hover {
+  color: #111;
+  background-color: rgb(241, 24, 24);
+  transition: all 0.5s;
+}
