--- a/src/Banner.css
+++ b/src/Banner.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Staatliches&display=swap');
 .banner {
   color: white;
   object-fit: contain;
@@ -12,14 +15,16 @@
   font-size: 3rem;
   font-weight: 800;
   padding-bottom: 0.3rem;
+  font-family: 'Staatliches', cursive;
 }
 .banner__description {
   width: 45rem;
-  font-size: 0.5rem;
+  font-size: 0.6rem;
   line-height: 1.3;
   padding-top: 1rem;
   height: 80px;
   max-width: 356px;
+  font-family: 'Staatliches', cursive;
 }
 @media (max-width: 386px) {
   .banner__description {
@@ -67,6 +72,7 @@
   border: none;
   outline: none;
   font-size: 1rem;
+  font-family: 'Staatliches', cursive;
 }
 .banner__button:hover {
   color: #111;
