--- a/src/Nav.css
+++ b/src/Nav.css
@@ -5,13 +5,18 @@
   justify-content: space-between;
   width: 100%;
   object-fit: contain;
+  padding: 20px;
 }
 .nav__icon {
+  position: fixed;
+  left: 20px;
   width: 80px;
   object-fit: contain;
 }
 
 .nav__avatar {
+  position: fixed;
+  right: 20px;
   width: 60px;
   object-fit: contain;
 }
