--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,9 +1,10 @@
 .nav {
   position: fixed;
   display: flex;
-  top: 10px;
+  top: 0px;
   justify-content: space-between;
   width: 100%;
+  height: 50px;
   object-fit: contain;
   padding: 20px;
   z-index: 1;
@@ -20,4 +21,7 @@
   right: 20px;
   width: 60px;
   object-fit: contain;
+}
+.nav__black {
+  background-color: #111;
 }
